// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseCard Details component does not have change session button on regular course 1`] = `
<div>
  <span
    class="small"
    data-testid="CourseCardDetails"
  >
    provider-name
     • 
    test-course-number
     • access-message
  </span>
</div>
`;

exports[`CourseCard Details component has change session button on entitlement course 1`] = `
<div>
  <span
    class="small"
    data-testid="CourseCardDetails"
  >
    provider-name
     • 
    test-course-number
     • access-message
     • 
    <button
      class="m-0 p-0"
      variant="link"
    >
      change-or-leave-session-message
    </button>
  </span>
</div>
`;

exports[`CourseCard Details component has change session button on entitlement course but no access message 1`] = `
<div>
  <span
    class="small"
    data-testid="CourseCardDetails"
  >
    provider-name
     • 
    test-course-number
     • 
    <button
      class="m-0 p-0"
      variant="link"
    >
      change-or-leave-session-message
    </button>
  </span>
</div>
`;
